--- a/index.html
+++ b/index.html
@@ -117,18 +117,14 @@
             <!--Container Home-->
             <div class="container-video">
               <div class="video-box">
-                <div class="video-iframe">
-                  <iframe
-                    src="https://www.youtube.com/embed/GITa0sOs05Q"
-                    title="YouTube video player"
-                    width="560"
-                    height="315"
-                    frameborder="0"
-                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                    allowfullscreen
-                  >
-                  </iframe>
-                </div>
+                <video
+                  src="./assets/videos/video-hero-lp-shallow.mp4"
+                  controls
+                  preload="metadata"
+                  class="meu-video"
+                >
+                  Seu navegador não suporta vídeos HTML5.
+                </video>
               </div>
               <a href="./form/" class="btn"
                 ><!--Botão Animado-->
@@ -175,22 +171,17 @@
             </div>
           </div>
           <!--Container Home-->
+
           <div class="container-home mobile-display">
             <!--Container Home-->
             <div class="container-video">
               <div class="video-box">
-                <div class="video-iframe">
-                  <iframe
-                    src="https://www.youtube.com/embed/GITa0sOs05Q"
-                    title="YouTube video player"
-                    width="560"
-                    height="315"
-                    frameborder="0"
-                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                    allowfullscreen
-                  >
-                  </iframe>
-                </div>
+                <video
+                  src="./assets/videos/video-hero-lp-shallow.mp4"
+                  controls
+                  preload="metadata"
+                  class="meu-video"
+                ></video>
               </div>
             </div>
             <div class="container-headline">
@@ -343,8 +334,7 @@
               </p>
             </li>
           </ul>
-          <a href="./form/" class="btn">
-            <span>Quero começar agora</span> </a
+          <a href="./form/" class="btn"> <span>Quero começar agora</span> </a
           ><!--Botão Animado-->
           <span class="elementFlex">Clique no botão acima</span>
         </div>
@@ -361,19 +351,12 @@
           <ul class="container-cases elementFlex">
             <li class="case elementFlex">
               <div class="video-container">
-                <div class="video-iframe">
-                  <iframe
-                    src="https://www.youtube.com/embed/ATJSpTt_TSs"
-                    loading="lazy"
-                    title="YouTube video player"
-                    width="560"
-                    height="315"
-                    frameborder="0"
-                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                    allowfullscreen
-                  >
-                  </iframe>
-                </div>
+                <video
+                  src="./assets/videos/video-feedback-lp-shallow.mp4"
+                  controls
+                  preload="metadata"
+                  class="meu-video"
+                ></video>
               </div>
               <h1>
                 RAI E KASSY<br /><span class="bg-text">
