--- a/index.html
+++ b/index.html
@@ -76,12 +76,13 @@
       href="./assets/css/pages/index/partials/responsive.css"
     />
     <link
-      rel="stylesheet"
+      rel="preconnect stylesheet"
       href="https://cdn-uicons.flaticon.com/2.6.0/uicons-solid-straight/css/uicons-solid-straight.css"
     />
     <script
       src="https://kit.fontawesome.com/3449d8e4b5.js"
-      crossorigin="anonymous"
+      defer
+      crossorigin
     ></script>
     <title>Seja uma Revendedora | Shallow Beachwear</title>
   </head>
@@ -106,10 +107,10 @@
             <div class="logo">
               <img
                 src="./assets/images/Design sem nome (2) (1).png"
+                fetchpriority="high"
                 alt="Logo Shallow Beachwear"
                 width="135"
                 height="135"
-                decoding="async"
               />
             </div>
           </header>
@@ -605,7 +606,7 @@
                   <!--Slides images-->
                   <div class="slide first">
                     <img
-                      src="./assets/images/Vanusa-comfundo-praia-01.jpeg"
+                      src="./assets/images/Vanusa-comfundo-praia-01.webp"
                       alt="Biquini Moda Praia"
                       loading="lazy"
                       decoding="async"
@@ -615,7 +616,7 @@
                   </div>
                   <div class="slide">
                     <img
-                      src="./assets/images/Vanusa-comfundo-praia-02.jpeg"
+                      src="./assets/images/Vanusa-comfundo-praia-02.webp"
                       alt="Biquini Moda Praia"
                       loading="lazy"
                       decoding="async"
@@ -625,7 +626,7 @@
                   </div>
                   <div class="slide">
                     <img
-                      src="./assets/images/Vanusa-comfundo-praia-03.jpeg"
+                      src="./assets/images/Vanusa-comfundo-praia-03.webp"
                       alt="Biquini Moda Praia"
                       loading="lazy"
                       decoding="async"
@@ -635,7 +636,7 @@
                   </div>
                   <div class="slide">
                     <img
-                      src="./assets/images/Vanusa-comfundo-praia-04.jpeg"
+                      src="./assets/images/Vanusa-comfundo-praia-04.webp"
                       alt="Biquini Moda Praia"
                       loading="lazy"
                       decoding="async"
@@ -677,7 +678,7 @@
                   <!--Slides images-->
                   <div class="slide first">
                     <img
-                      src="./assets/images/Vanusa-comfundo-fitness-01.jpeg"
+                      src="./assets/images/Vanusa-comfundo-fitness-01.webp"
                       alt="Top Moda Fitness"
                       loading="lazy"
                       decoding="async"
@@ -687,7 +688,7 @@
                   </div>
                   <div class="slide">
                     <img
-                      src="./assets/images/Vanusa-comfundo-fitness-02.jpeg"
+                      src="./assets/images/Vanusa-comfundo-fitness-02.webp"
                       alt="Top Moda Fitness"
                       loading="lazy"
                       decoding="async"
@@ -697,7 +698,7 @@
                   </div>
                   <div class="slide">
                     <img
-                      src="./assets/images/Vanusa-comfundo-fitness-03.jpeg"
+                      src="./assets/images/Vanusa-comfundo-fitness-03.webp"
                       alt="Top Moda Fitness"
                       loading="lazy"
                       decoding="async"
@@ -707,7 +708,7 @@
                   </div>
                   <div class="slide">
                     <img
-                      src="./assets/images/Vanusa-comfundo-fitness-02.jpeg"
+                      src="./assets/images/Vanusa-comfundo-fitness-02.webp"
                       alt="Top Moda Fitness"
                       loading="lazy"
                       decoding="async"
@@ -942,6 +943,6 @@
         >
       </div>
     </footer>
-    <script src="./assets/js/script.js"></script>
+    <script src="./assets/js/script.js" defer></script>
   </body>
 </html>
