queme-fotos add

--- a/index.html
+++ b/index.html
@@ -515,19 +515,51 @@
         <div class="centro">
           <div class="container-historia">
             <h1 class="whitecolor elementFlex">QUEM É A SHALLOW?</h1>
-            <div class="box">
-              <p class="whitecolor">
-                Em apenas cinco anos, a Shallow se destacou no mercado de moda
-                praia e fitness, conquistando clientes no Brasil e no exterior.
-                Fundada por Scheila Rosa, a marca possui 5 anos, combinando
-                inovação e qualidade. Nossas peças são confeccionadas com
-                tecidos de alta tecnologia e detalhes luxuosos, garantindo uma
-                experiência única. A Shallow é a marca que mais cresce no Brasil
-                no setor de Moda Praia e Fitness, contando com presença em mais
-                de 20 estados brasileiros e 25 países. Influenciadores e
-                produções renomadas já utilizam nossas peças no seu dia a dia,
-                consolidando nossa autoridade no mercado.
-              </p>
+            <div class="box-qe">
+              <div class="container-img">
+                <img
+                  src="./assets/images/scheila-26.webp"
+                  class="img-inside-box"
+                  alt="Scheila Maria Rosa - Fundadora da Shallow Beachwear"
+                  loading="lazy"
+                  decoding="async"
+                  width="350"
+                  height="525"
+                />
+                <img
+                  src="./assets/images/scheila-50.webp"
+                  class="img-inside-box"
+                  alt="Scheila Maria Rosa - Fundadora da Shallow Beachwear"
+                  loading="lazy"
+                  decoding="async"
+                  width="350"
+                  height="525"
+                />
+                <img
+                  src="./assets/images/scheila-56.webp"
+                  class="img-inside-box"
+                  alt="Scheila Maria Rosa - Fundadora da Shallow Beachwear"
+                  loading="lazy"
+                  decoding="async"
+                  width="350"
+                  height="525"
+                />
+              </div>
+              <div class="container-p">
+                <p class="whitecolor">
+                  Em apenas cinco anos, a Shallow se destacou no mercado de moda
+                  praia e fitness, conquistando clientes no Brasil e no
+                  exterior. Fundada por Scheila Rosa, a marca possui 5 anos,
+                  combinando inovação e qualidade. Nossas peças são
+                  confeccionadas com tecidos de alta tecnologia e detalhes
+                  luxuosos, garantindo uma experiência única. A Shallow é a
+                  marca que mais cresce no Brasil no setor de Moda Praia e
+                  Fitness, contando com presença em mais de 20 estados
+                  brasileiros e 25 países. Influenciadores e produções renomadas
+                  já utilizam nossas peças no seu dia a dia, consolidando nossa
+                  autoridade no mercado.
+                </p>
+              </div>
             </div>
             <a href="./form/" class="btn"
               ><!--Botão Animado-->
