mobile grid change

--- a/index.html
+++ b/index.html
@@ -360,14 +360,32 @@
                 ></video>
               </div>
               <h1>
-                RAI E KASSY<br /><span class="bg-text">
+                Rai e Kassy<br /><span class="bg-text">
                   revendedoras há 5 anos</span
                 >
               </h1>
               <p>
                 "A renda extra da Shallow nos proporcionou realizar vários
-                sonhos, adquirir muitos bens, proporcionar momentos especiais
-                com nossa família."
+                sonhos, adquirir muitos bens, proporcionar momentos especiais."
+              </p>
+            </li>
+            <li class="case elementFlex">
+              <div class="video-container">
+                <video
+                  src="./assets/videos/video-feedback-lp-shallow-02.mp4"
+                  controls
+                  preload="metadata"
+                  class="meu-video"
+                ></video>
+              </div>
+              <h1>
+                Mariane Marquez<br /><span class="bg-text">
+                  revendedoras há 1 ano</span
+                >
+              </h1>
+              <p>
+                "Quando eu falo de Shallow, eu lembro de proteção, lembro de
+                inspiração, lembro de empoderamento."
               </p>
             </li>
           </ul>
