--- a/index.html
+++ b/index.html
@@ -6,6 +6,14 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0, shrink-to-fit=no"
     />
+
+    <!-- Adicionado resource hints para melhorar performance -->
+    <link rel="dns-prefetch" href="//kit.fontawesome.com" />
+    <link rel="dns-prefetch" href="//cdn-uicons.flaticon.com" />
+    <link rel="dns-prefetch" href="//www.googletagmanager.com" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+
     <!-- Tags básicas de SEO -->
     <meta
       name="description"
@@ -13,7 +21,7 @@
     />
     <meta
       name="keywords"
-      content="revendedora shallow, moda praia, moda fitness, revenda de roupas, renda extra, independência financeira"
+      content="revendedora, revendedora shallow, shallow, moda praia, moda fitness, revenda de roupas, renda extra, independência financeira"
     />
 
     <!-- Tags Open Graph básicas -->
@@ -70,20 +78,25 @@
       href="assets/favicon/favicon.ico"
       type="image/x-icon"
     />
+
+    <!-- Unificado arquivos CSS em um só para reduzir requisições HTTP -->
     <link rel="stylesheet" href="./assets/css/pages/index/index.css" />
     <link
       rel="stylesheet"
       href="./assets/css/pages/index/partials/responsive.css"
     />
+
     <link
-      rel="preconnect stylesheet"
+      rel="stylesheet"
       href="https://cdn-uicons.flaticon.com/2.6.0/uicons-solid-straight/css/uicons-solid-straight.css"
     />
+
     <script
       src="https://kit.fontawesome.com/3449d8e4b5.js"
-      defer
-      crossorigin
+      async
+      crossorigin="anonymous"
     ></script>
+
     <title>Seja uma Revendedora | Shallow Beachwear</title>
   </head>
 
@@ -106,7 +119,7 @@
           <header>
             <div class="logo">
               <img
-                src="./assets/images/Design sem nome (2) (1).png"
+                src="./assets/images/logo-shallow.webp"
                 fetchpriority="high"
                 alt="Logo Shallow Beachwear"
                 width="135"
@@ -141,26 +154,12 @@
                 Revendendo Moda Praia e Fitness.
               </h1>
               <span>POR SCHEILA ROSA - CEO SHALLOW</span>
-              <svg
+              <img
+                src="./assets/images/divider.svg"
+                alt="Divisor decorativo"
                 class="divider"
-                xmlns="http://www.w3.org/2000/svg"
-                xmlns:xlink="http://www.w3.org/1999/xlink"
-                data-name="Layer 1"
-                preserveAspectRatio="xMidYMid meet"
-                version="1.0"
-                viewBox="0.0 -0.1 500.0 31.2"
-                zoomAndPan="magnify"
-                style="fill: rgb(0, 0, 0)"
-                original_string_length="1160"
-              >
-                <g id="__id627_so3aqhxrv">
-                  <path
-                    d="M241.08,10.77,245.27,15,250,10.22,254.73,15l4.19-4.18L250,1.85Zm22.62,4.78-3.85,3.85L256,15.55l3.84-3.85Zm-27.4,0,3.85,3.85L244,15.55l-3.84-3.85ZM250,20.87l-4.73-4.73-4.19,4.19L250,29.25l8.92-8.92-4.19-4.19Zm11-10.36,4.56,4.57a.66.66,0,0,1,0,.94L261,20.58,270,29.5l14-13.95L270,1.6Zm-22.08,0L230,1.6l-13.95,14L230,29.5,239,20.58,234.4,16a.66.66,0,0,1,0-.94Zm21.14-.93L269.49.19a.68.68,0,0,1,.94,0l14.69,14.7,214.22-.28a.66.66,0,1,1,0,1.32l-214.22.28L270.43,30.9a.66.66,0,0,1-.94,0l-9.39-9.38-9.38,9.38a1.8,1.8,0,0,1-1.44,0l-9.38-9.38-9.39,9.38a.66.66,0,0,1-.94,0L214.88,16.21.66,15.93a.66.66,0,0,1,0-1.32l214.22.28L229.57.19a.68.68,0,0,1,.94,0l9.39,9.39L249.28.19a1.92,1.92,0,0,1,1.44,0Z"
-                    fill-rule="evenodd"
-                    style="fill: rgb(255, 255, 255)"
-                  />
-                </g>
-              </svg>
+                loading="lazy"
+              />
               <h2>
                 Você está pronta para conquistar sua
                 <b><span class="pinkcolor">liberdade financeira</span></b> e
@@ -169,63 +168,6 @@
                 <b><span class="pinkcolor">negócio lucrativo</span></b
                 >?
               </h2>
-            </div>
-          </div>
-          <!--Container Home-->
-
-          <div class="container-home mobile-display">
-            <!--Container Home-->
-            <div class="container-video">
-              <div class="video-box">
-                <video
-                  src="./assets/videos/video-hero-lp-shallow.mp4"
-                  controls
-                  preload="metadata"
-                  class="meu-video"
-                ></video>
-              </div>
-            </div>
-            <div class="container-headline">
-              <h1>
-                Descubra Como
-                <span class="pinkcolor">Mulheres Independentes</span> Estão
-                Ganhando <span class="pinkcolor">R$5.000 ou Mais</span> Por Mês
-                Revendendo Moda Praia e Fitness.
-              </h1>
-              <span>POR SCHEILA ROSA - CEO SHALLOW</span>
-              <svg
-                class="divider"
-                xmlns="http://www.w3.org/2000/svg"
-                xmlns:xlink="http://www.w3.org/1999/xlink"
-                data-name="Layer 1"
-                preserveAspectRatio="xMidYMid meet"
-                version="1.0"
-                viewBox="0.0 -0.1 500.0 31.2"
-                zoomAndPan="magnify"
-                style="fill: rgb(0, 0, 0)"
-                original_string_length="1160"
-              >
-                <g id="__id627_so3aqhxrv">
-                  <path
-                    d="M241.08,10.77,245.27,15,250,10.22,254.73,15l4.19-4.18L250,1.85Zm22.62,4.78-3.85,3.85L256,15.55l3.84-3.85Zm-27.4,0,3.85,3.85L244,15.55l-3.84-3.85ZM250,20.87l-4.73-4.73-4.19,4.19L250,29.25l8.92-8.92-4.19-4.19Zm11-10.36,4.56,4.57a.66.66,0,0,1,0,.94L261,20.58,270,29.5l14-13.95L270,1.6Zm-22.08,0L230,1.6l-13.95,14L230,29.5,239,20.58,234.4,16a.66.66,0,0,1,0-.94Zm21.14-.93L269.49.19a.68.68,0,0,1,.94,0l14.69,14.7,214.22-.28a.66.66,0,1,1,0,1.32l-214.22.28L270.43,30.9a.66.66,0,0,1-.94,0l-9.39-9.38-9.38,9.38a1.8,1.8,0,0,1-1.44,0l-9.38-9.38-9.39,9.38a.66.66,0,0,1-.94,0L214.88,16.21.66,15.93a.66.66,0,0,1,0-1.32l214.22.28L229.57.19a.68.68,0,0,1,.94,0l9.39,9.39L249.28.19a1.92,1.92,0,0,1,1.44,0Z"
-                    fill-rule="evenodd"
-                    style="fill: rgb(255, 255, 255)"
-                  />
-                </g>
-              </svg>
-              <h2>
-                Você está pronta para conquistar sua
-                <b><span class="pinkcolor">liberdade financeira</span></b> e
-                fazer da sua <b><span class="pinkcolor">paixão</span></b> por
-                moda praia e fitness um
-                <b><span class="pinkcolor">negócio lucrativo</span></b
-                >?
-              </h2>
-              <a href="./form/" class="btn"
-                ><!--Botão Animado-->
-                <span>Seja uma revendedora Shallow</span>
-              </a>
-              <span class="elementFlex">Clique no botão acima</span>
             </div>
           </div>
           <!--Container Home-->
@@ -355,8 +297,11 @@
                 <video
                   src="./assets/videos/video-feedback-lp-shallow.mp4"
                   controls
-                  preload="metadata"
+                  preload="none"
+                  loading="lazy"
+                  poster="./assets/images/video-feedback-poster-01.webp"
                   class="meu-video"
+                  aria-label="Depoimento de Rai e Kassy, revendedoras há 5 anos"
                 ></video>
               </div>
               <h1>
@@ -374,8 +319,11 @@
                 <video
                   src="./assets/videos/video-feedback-lp-shallow-02.mp4"
                   controls
-                  preload="metadata"
+                  preload="none"
+                  loading="lazy"
+                  poster="./assets/images/video-feedback-poster-02.webp"
                   class="meu-video"
+                  aria-label="Depoimento de Mariane Marquez, revendedora há 1 ano"
                 ></video>
               </div>
               <h1>
@@ -463,7 +411,7 @@
       <section class="como-ser elementFlex">
         <!--Página 6 Como ser Revendedora-->
         <img
-          src="./assets/images/pincelado-rosa.png"
+          src="./assets/images/pincelado-rosa.webp"
           alt="Mancha de Tinta"
           class="paint-stain"
           loading="lazy"
@@ -547,7 +495,7 @@
                 <img
                   src="./assets/images/timeshallow-transformed.webp"
                   class="img-inside-box"
-                  alt="Scheila Maria Rosa - Fundadora da Shallow Beachwear"
+                  alt="Time da Shallow Beachwear"
                   loading="lazy"
                   decoding="async"
                   width="350"
@@ -893,7 +841,7 @@
         <div class="line"></div>
         <div class="logo elementFlex">
           <img
-            src="./assets/images/Design sem nome (2) (1).png"
+            src="./assets/images/logo-shallow.webp"
             alt="Logo Shallow"
             class="center-image"
             loading="lazy"
@@ -933,7 +881,7 @@
       <div class="at-rs">
         <div class="logo elementFlex">
           <img
-            src="./assets/images/Design sem nome (2) (1).png"
+            src="./assets/images/logo-shallow.webp"
             alt="Logo Shallow"
             class="center-image"
             loading="lazy"
@@ -993,6 +941,7 @@
         >
       </div>
     </footer>
-    <script src="./assets/js/script.js" defer></script>
+    <div id="root"></div>
+    <script type="module" src="assets/js/script.js"></script>
   </body>
 </html>
