optimize img bg

--- a/index.html
+++ b/index.html
@@ -114,6 +114,13 @@
     <main>
       <section class="home">
         <!--Página Inicial Home-->
+        <!-- Prioridade máxima para imagem de fundo -->
+        <img
+          src="./assets/images/fundofachada.webp"
+          fetchpriority="high"
+          class="bg-hero"
+          alt="Fundo da Fachada Shallow Beachwear"
+        />
         <div class="centro">
           <!--centro-->
           <header>
