poster video add and flaticon delete

--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
 
     <!-- Adicionado resource hints para melhorar performance -->
     <link rel="dns-prefetch" href="//kit.fontawesome.com" />
-    <link rel="dns-prefetch" href="//cdn-uicons.flaticon.com" />
     <link rel="dns-prefetch" href="//www.googletagmanager.com" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -141,17 +140,13 @@
                 <video
                   src="./assets/videos/video-hero-lp-shallow.mp4"
                   controls
-                  preload="metadata"
+                  poster="./assets/images/video-hero-poster.webp"
+                  preload="none"
                   class="meu-video"
                 >
                   Seu navegador não suporta vídeos HTML5.
                 </video>
               </div>
-              <a href="./form/" class="btn"
-                ><!--Botão Animado-->
-                <span>Seja uma revendedora Shallow</span>
-              </a>
-              <span class="elementFlex">Clique no botão acima</span>
             </div>
             <div class="container-headline">
               <h1>
@@ -175,6 +170,11 @@
                 <b><span class="pinkcolor">negócio lucrativo</span></b
                 >?
               </h2>
+              <a href="./form/" class="btn"
+                ><!--Botão Animado-->
+                <span>Seja uma revendedora Shallow</span>
+              </a>
+              <span class="elementFlex">Clique no botão acima</span>
             </div>
           </div>
           <!--Container Home-->
@@ -195,22 +195,22 @@
             <h3>Veja como é simples:</h3>
             <ul class="passos-venda elementFlex">
               <li class="passo-venda">
-                <i class="fi fi-ss-coins"></i>
+                <i class="fa-solid fa-coins"></i>
                 <p>PAGUE R$100,00</p>
               </li>
-              <i class="fi fi-ss-angle-right"></i>
+              <i class="fa-solid fa-chevron-right"></i>
               <li class="passo-venda">
-                <i class="fi fi-ss-money-transfer-coin-arrow"></i>
+                <i class="fa-solid fa-money-bill-transfer"></i>
                 <p>REVENDA POR R$200,00</p>
               </li>
-              <i class="fi fi-ss-angle-right"></i>
+              <i class="fa-solid fa-chevron-right"></i>
               <li class="passo-venda">
-                <i class="fi fi-ss-sack-dollar"></i>
+                <i class="fa-solid fa-sack-dollar"></i>
                 <p>LUCRE R$100</p>
               </li>
-              <i class="fi fi-ss-angle-right"></i>
+              <i class="fa-solid fa-chevron-right"></i>
               <li class="passo-venda">
-                <i class="fi fi-ss-growth-chart-invest"></i>
+                <i class="fa-solid fa-chart-line"></i>
                 <p>100% DE LUCRO EM CADA VENDA!</p>
               </li>
             </ul>
